--- a/src/Styles/scss/custom.scss
+++ b/src/Styles/scss/custom.scss
@@ -1,10 +1,11 @@
+/** BOOTSTRAP SETTINGS **/
 // Change default width of containers
 $container-max-widths: (
   sm: 540px,
   md: 720px,
-  lg: 960px,
-  xl: 1140px,
-  xxl: 1320px
+  lg: 850px,
+  xl: 900px,
+  xxl: 900px
 );
 
 // change default breakpoints of containers
@@ -12,7 +13,7 @@ $grid-breakpoints: (
   xs: 0,
   sm: 576px,
   md: 768px,
-  lg: 992px,
-  xl: 1200px,
-  xxl: 1400px
+  lg: 896px,
+  xl: 1000px,
+  xxl: 1000px
 );
